# projetAnnuel

./: CAS_DE_TESTS.ipynb  CMakeLists.txt  Notebook__CAS_DE_TESTS.ipynb  app.py  library.c  library.cpp  library.h  main.cpp  main.py  note_modele_wrapper.odt  pythonTest.ipynb  test.txt  testTypePlaneteModel.json  teste.cpp  teste.h  ~$te_modele_wrapper.odt
.ipynb_checkpoints/: CAS_DE_TESTS-checkpoint.ipynb  Notebook__CAS_DE_TESTS-checkpoint.ipynb  projetAnuel_teste-checkpoint.ipynb  pythonTest-checkpoint.ipynb
FirstModel/: MLP_Wrapper.py  MLP_sklearn.py  PMC_tel_gaz.py  linear_model_Wrapper.py  linear_model_sklearn.py  model_lin_Planete.py  testPlanete.py  wrapper use.py  wrapper.ipynb  wrapper_use_linear_model.py
FirstModel/service/: service.py  wrapper.py  wrapper_use.py  wrapper_use_linear_model.py
ServeurML/FirstModel/: MLP_Wrappe.py  MLP_keras.py  PMC.py  Wrapper use.py  [Exemple] Burgers and Sandwiches src(2).py  linear_model_keras.py  loadTest.py  main.py  model_lin_Planete.py  model_lin_tul_ou_gazeause.py  model_linaire_tu_ou_gazeuse.json  testPlanete.py  testTypePlanete.py  test_load_ML.py  test_load_PMC.py
ServeurML/Info Modele/: 03_28.json  25_07_2021_2h_54.json  25_07_2021_3h_02.json  25_07_2021_bonne_predic.json  2_entries.json  MLineaire_planete.json  PMC_tel_gaz.json  TelGaz.json  scratch.json  scratch_linaire_wrapper1-1.json  scratch_linaire_wrapper1-2.json  scratch_linaire_wrapper1.json  scratch_linaire_wrapper2.json  scratch_linaire_wrapper3.json  scratch_linaire_wrapper_gaz.json  scratch_linaire_wrapper_gaz1.json  testPlaneteModel2.json  (+3 more)
(+25 files in other folders)
